NetBSD Problem Report #42390

From www@NetBSD.org  Mon Nov 30 18:32:13 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 2D94563C4AE
	for <gnats-bugs@gnats.netbsd.org>; Mon, 30 Nov 2009 18:32:13 +0000 (UTC)
Message-Id: <20091130183212.C188563C497@www.NetBSD.org>
Date: Mon, 30 Nov 2009 18:32:12 +0000 (UTC)
From: ur@a-r.org
Reply-To: ur@a-r.org
To: gnats-bugs@NetBSD.org
Subject: MPPE doesn't work on NetBSD-current
X-Send-Pr-Version: www-1.0

>Number:         42390
>Category:       bin
>Synopsis:       MPPE doesn't work on NetBSD-current
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Nov 30 18:35:00 +0000 2009
>Closed-Date:    Mon Nov 22 04:43:44 +0000 2010
>Last-Modified:  Mon Nov 22 04:43:44 +0000 2010
>Originator:     Shuichiro URATA
>Release:        NetBSD-current/amd64
>Organization:
>Environment:
NetBSD charlotte 5.99.22 NetBSD 5.99.22 (CHARLOTTE) #0: Tue Dec  1 01:13:51 JST 2009  ur@charlotte:/usr/src/sys/arch/amd64/compile/CHARLOTTE amd64

>Description:
pppd uses bool as bitmap. it causes MPPE doesn't work.
Maybe same problem as PR/41627.
>How-To-Repeat:

>Fix:
Index: ccp.h
===================================================================
RCS file: /cvsroot/src/dist/pppd/pppd/ccp.h,v
retrieving revision 1.1.1.1
diff -c -r1.1.1.1 ccp.h
*** ccp.h       20 Feb 2005 10:28:37 -0000      1.1.1.1
--- ccp.h       30 Nov 2009 18:16:55 -0000
***************
*** 39,45 ****
      bool predictor_2;         /* do Predictor-2? */
      bool deflate_correct;     /* use correct code for deflate? */
      bool deflate_draft;               /* use draft RFC code for deflate? */
!     bool mppe;                        /* do MPPE? */
      u_short bsd_bits;         /* # bits/code for BSD Compress */
      u_short deflate_size;     /* lg(window size) for Deflate */
      short method;             /* code for chosen compression method */
--- 39,45 ----
      bool predictor_2;         /* do Predictor-2? */
      bool deflate_correct;     /* use correct code for deflate? */
      bool deflate_draft;               /* use draft RFC code for deflate? */
!     u_short mppe;                     /* do MPPE? */
      u_short bsd_bits;         /* # bits/code for BSD Compress */
      u_short deflate_size;     /* lg(window size) for Deflate */
      short method;             /* code for chosen compression method */

>Release-Note:

>Audit-Trail:
From: "Aaron J. Grier" <agrier@poofygoof.com>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/42390: MPPE doesn't work on NetBSD-current
Date: Tue, 16 Feb 2010 21:48:42 -0800

 this affects NetBSD-5 as well.

 I have verified Urata-san's patch fixes the problem under NetBSD-5.

 -- 
   Aaron J. Grier | "Not your ordinary poofy goof." | agrier@poofygoof.com

From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42390 CVS commit: src/dist/pppd/pppd
Date: Sat, 31 Jul 2010 21:21:17 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sat Jul 31 21:21:17 UTC 2010

 Modified Files:
 	src/dist/pppd/pppd: ccp.h

 Log Message:
 Don't attempt to store bitmasks in a variable of type 'bool'.
 From Shuichiro URATA in PR 42390. Should be pulled up to -5.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.1 -r1.2 src/dist/pppd/pppd/ccp.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 03 Nov 2010 01:53:15 +0000
State-Changed-Why:
pullup-5 #1469


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42390 CVS commit: [netbsd-5] src/dist/pppd/pppd
Date: Sun, 21 Nov 2010 22:09:33 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Sun Nov 21 22:09:32 UTC 2010

 Modified Files:
 	src/dist/pppd/pppd [netbsd-5]: ccp.h

 Log Message:
 Pull up following revision(s) (requested by dholland in ticket #1469):
 	dist/pppd/pppd/ccp.h: revision 1.2
 Don't attempt to store bitmasks in a variable of type 'bool'.
 From Shuichiro URATA in PR 42390. Should be pulled up to -5.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.1 -r1.1.1.1.32.1 src/dist/pppd/pppd/ccp.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 22 Nov 2010 04:43:44 +0000
State-Changed-Why:
fixed and pulled up to netbsd-5; thanks for tracking this down


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.