Pull up following revision(s) (requested by dholland in ticket #1469): 	dist/pppd/pppd/ccp.h: revision 1.2 Don't attempt to store bitmasks in a variable of type 'bool'. From Shuichiro URATA in PR 42390. Should be pulled up to -5.